removed autoscrolling, fixed translating on safari.

--- a/assets/css/styles.styl
+++ b/assets/css/styles.styl
@@ -120,6 +120,7 @@ body
         left 50%
         top 50%
         transform translate(-50%, -50%)
+        -webkit-transform translate(-50%, -50%)
         width 60%
         position absolute
         padding 2rem
@@ -347,6 +348,7 @@ body
           left 50%
           top 50%
           transform translate(-50%, -50%)
+          -webkit-transform translate(-50%, -50%)
           position absolute
           
           
@@ -446,6 +448,7 @@ body
               left 50%
               top 50%
               transform translate(-50%, -50%)
+              -webkit-transform translate(-50%, -50%)
               font-size 1rem
               color shallow-abyss
               
